--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   color: #61dafb;
 }
 
+.header{
+  display: flex;
+  height: 10%;
+  width: 100%;
+  justify-content: space-between;
+  background: rgb(180, 220, 226);
+}
+
+.path{
+  display:flex;
+  align-items: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
