--- a/src/sass/_create-event.scss
+++ b/src/sass/_create-event.scss
@@ -1,3 +1,32 @@
 textarea {
     resize: none;
 }
+
+.w-20 {
+    width: 20% !important
+}
+
+.padx-0 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.padl-0 {
+    padding-left: 0;
+}
+
+.padr-0 {
+    padding-right: 0;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
