--- a/src/sass/_create-event.scss
+++ b/src/sass/_create-event.scss
@@ -26,3 +26,36 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.mod-date {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgba(0,0,0,0.4);
+  animation: animateopacity;
+  animation-duration: 400ms;
+}
+
+.mod-date-content {
+  height: 10%;
+  top:-10%;
+}
+
+.h-100 {
+  height: 100%;
+}
+
+@keyframes animateopacity {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
