--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import '../../node_modules/bootstrap/scss/bootstrap';
 @import 'create-event';
 @import 'variable-overrides';
-@import 'header.scss';
-@import 'register.scss';
-@import 'login.scss';
+@import 'header';
+@import 'register';
+@import 'login';
+@import 'month-view';
