--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,8 @@
+$primary: #0090a7;
+$secondary: #84b8c4;
+$third: #116f85;
+$fourth: #d2ecf9;
+
 @import '../../node_modules/bootstrap/scss/bootstrap';
 @import 'variable-overrides';
 @import 'utils';
