some event-page functionality, installed fontawesome

--- a/src/sass/_variable-overrides.scss
+++ b/src/sass/_variable-overrides.scss
@@ -1,3 +1,10 @@
-.submit{
+
+$primary: #0090a7;
+$secondary: #84b8c4;
+$third: #116f85;
+$fourth: #d2ecf9;
+
+
+.submit {
     background-color: $primary;
 }
