--- a/src/sass/_utils.scss
+++ b/src/sass/_utils.scss
@@ -11,6 +11,16 @@ body, #root, .App {
     padding-right: 0;
 }
 
+.padx-15 {
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.padx-20 {
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
 .padl-0 {
     padding-left: 0;
 }
