--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -7,7 +7,7 @@
   }
 
   .link{
-    color: #ffffff;
+    color: #25252585;
   }
   
   .header-user, .nav-menu{
@@ -18,12 +18,15 @@
   .user-btn{
     //background-color: #b97763;
     border: none;
-    color: #ffffff;
-    text-align: center;
+    color: #25252585;
     transition: 0.3s;
     border-radius: 20px;
     width: 120px;
     line-height: 34px;
-    text-align: center;
     text-decoration: none;
+  }
+  
+  .dropdown-menu{
+    left: -40px!important;
+    width: 20px!important;
   }
