cleaned up date page, events appear on the dates they span

--- a/src/sass/_utils.scss
+++ b/src/sass/_utils.scss
@@ -37,6 +37,10 @@ body, #root, .App {
     margin: 0;
 }
 
+.marx-20 {
+    margin: 0 20% 0 20%;
+}
+
 .col-grid-7 {
     margin: .25rem .25rem;
     width: calc(14.285714285714285714285714285714285714285714285714285714285714285% - 0.5rem);
