--- a/src/sass/_utils.scss
+++ b/src/sass/_utils.scss
@@ -46,6 +46,7 @@ body, #root, .App {
     width: calc(14.285714285714285714285714285714285714285714285714285714285714285% - 0.5rem);
     height: 5rem;
     padding: .25rem .25rem;
+    overflow: hidden;
 }
 
 .unselectable {
