--- a/src/sass/_calendar.scss
+++ b/src/sass/_calendar.scss
@@ -3,7 +3,7 @@
 .event-marker {
     width: 1.5rem;
     height: 1.5rem;
-    background-color: lightsalmon;
+    background-color: rgb(252, 124, 73);
     text-align: center;
     border-radius: 25%;
 }
