dropdown width fix

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -31,7 +31,7 @@
   
   .drop{
     left: -40px!important;
-    width: 20px!important;
+    width: auto!important;
   }
   .userName{
     color: white;
