--- a/src/sass/_calendar.scss
+++ b/src/sass/_calendar.scss
@@ -11,3 +11,21 @@
     transition: border-radius, background-color 0.2s;
     border-radius: 5%;
 }
+
+@media (min-width: 768px) {
+    .w-md-50 {
+        width:50% !important;
+    }
+    .w-md-45 {
+        width:45% !important;
+    }
+  }
+
+  @media (min-width: 992px) {
+    .w-lg-40 {
+        width:40% !important;
+    }
+    .w-lg-35 {
+        width:35% !important;
+    }
+  }
